# pose

./: .gitignore  Cargo.toml  Makefile  README.md  pose.fbs
docs/arch/: 01-introduction.md  02-constraints.md  03-system-scope-and-context.md  04-solution-strategy.md  05-building-block-view.md  06-runtime-view.md  07-deployment-view.md  08-crosscutting-concepts.md  09-architecture-decisions.md  10-quality-requirements.md  11-risks-and-technical-debt.md  12-glossary.md  README.md  building-block-view.md  components.md  constraints.md  context.md  deployment.md  quality-requirements.md  runtime.md
python/: README.md  pose_tool.py  pyproject.toml  pyrightconfig.json  requirements.txt
python/pose/: run_server.py
python/pose/detection/: __init__.py  pose_landmark_detection.py
python/pose/network/: __init__.py  forward.py
python/pose/network/tcp/: server.py
python/pose/network/ws/: server.py
python/pose/protocol/fbs/: detection.py
python/pose/utils/: dummy.py
python/pose/visualize/: mp_drawing.py
python/tests/: test_parser.py  test_system_tcp.py
schemas/: pose.fbs
scripts/: run.sh
scripts/ascii/: pose_art.txt
scripts/python/: client.py  gen_adr_log.py  pose_client.py  pyrightconfig.json
src/: lib.rs  main.rs
src/character/: character.rs  landmarks.rs  mod.rs  player.rs  skeleton.rs
src/components/: components.rs  mod.rs
src/detection/: provider.rs
src/landmark/: drawing.rs  index.rs  mod.rs  provider.rs  stream.rs
src/network/: forward.rs  mod.rs  (+4 more)
tests/: integration_forward.rs  integration_pose.rs  integration_tcp.rs  test_system_tcp.rs
(+27 files in other folders)
